# RAGDoll

./: .env.example  .gitignore  .pre-commit-config.yaml  AWS_SETUP_SUMMARY.md  CLAUDE.md  README.md  pi-bedrock.cmd  pyproject.toml  test_aws_setup.py
demo/: export_trecdl2022_qrel.py  trecdl2022_qrels_grouped_small.jsonl  trecdl2022_qrels_small.jsonl  trecdl_2022_ragdoll.requests.jsonl  umbrela_demo.requests.jsonl
docs/: aws_bedrock_setup.md  reproduction_side-by-side_arena.md  reproduction_trec-rag_2024.md
examples/: nuggetizer.agentic-create.jsonl  nuggetizer.create.jsonl  setup_bedrock_credentials.py  support.requests.jsonl
examples/configs/: umbrela-judge.yaml
experiments/: search_arena_prompt_search.py
src/pi_trec/: __init__.py  cli.py  config.py  cost.py  doctor.py  nuggetizer.py  pyserini_wrapper.py  runner.py  stats.py  trec_io.py  validate.py
src/pi_trec/arena/: __init__.py  flows.py  metrics.py  prompts.py  stages.py
src/pi_trec/nuggetizer/: __init__.py  flows.py  metrics.py  prompts.py  stages.py
src/ragdoll/: __init__.py  aws_credentials.py  castorini_wrapper.py  cli.py  config.py  cost.py  doctor.py  jsonl.py  pyserini_wrapper.py  runner.py  trec_io.py  validate.py
tests/: conftest.py  test_arena.py  test_aws_credentials.py  test_castorini_wrapper.py  test_cli_smoke.py  test_config.py  test_metrics.py  test_nuggetizer.py  test_prompt_provenance.py  test_pyserini_wrapper.py  test_rubric.py  test_runner.py  test_runner_cache.py  test_support.py  test_trec_io.py  test_umbrela.py  test_validate_and_profile.py
tools/: plot_support_kendall.py
(+51 files in other folders)
