[project]
name = "pi-trec"
version = "0.1.0"
description = "Private Pi/Codex runner for RAG evaluation prompts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arena-rank>=0.1.1",
    "pyyaml>=6",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]

[project.scripts]
pi-trec = "pi_trec.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.7",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# Line length is left to judgment/formatting, not enforced as a lint failure.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_redundant_casts = true
